--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "javascript-action-template",
+  "name": "restore-cache",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Restore a cache without saving it post-job ",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "npm ci && esbuild ./src/main.js --bundle --platform=node --outfile=dist/index.js && npm run format && git add dist/*",
-    "bundle": "esbuild ./src/main.js --bundle --platform=node --outfile=dist/index.js",
+    "build": "npm ci && ncc build -o dist src/main.js && npm run format && git add dist/*",
     "format": "prettier --write **/*.js",
     "format-check": "prettier --check **/*.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build"
-    }
-  },
   "keywords": [],
-  "author": "wtw",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.2.7"
+    "@actions/core": "^1.2.6",
+    "@actions/exec": "^1.0.1",
+    "@actions/io": "^1.1.0",
+    "@martijnhols/actions-cache": "^1.1.3"
   },
   "devDependencies": {
-    "esbuild": "^0.12.8",
+    "@vercel/ncc": "^0.31.1",
     "husky": "^4.3.8",
     "install": "^0.13.0",
     "prettier": "^2.3.0"
