--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/exec": "^1.0.1",
-    "@actions/io": "^1.1.0",
-    "@martijnhols/actions-cache": "^1.1.3"
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/io": "^1.1.3",
+    "@actions/cache": "^3.2.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
